tests/init/neg/promotion-segment3.check
-- Error: tests/init/neg/promotion-segment3.scala:9:6 ------------------------------------------------------------------
9 |  bar(new B)  // error
  |      ^^^^^
  |Could not verify that the method argument is transitively initialized (Hot). It was found to be a non-transitively initialized (Warm) object of type (class B) { outer = the original object of type (class A) where initialization checking started }. Only transitively initialized arguments may be passed to methods (except constructors). Calling trace:
  |├── class A:	[ promotion-segment3.scala:2 ]
  |│   ^
  |└── bar(new B)  // error	[ promotion-segment3.scala:9 ]
  |        ^^^^^
  |
  |Promoting the value to transitively initialized (Hot) failed due to the following problem:
  |Promotion cancelled as the value contains inner class C.
